Add test coverage improvements and refactor tenant contact to User entity